ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aspnetapp-dev
  namespace: apps
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    cert-manager.io/cluster-issuer: letsencrypt-production
    cert-manager.io/acme-challenge-type: http01
spec:
  tls:
    - hosts:
        - "test.architect4hire.com"
      secretName: tls-secret
  rules:
    - host: "test.architect4hire.com"
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: sample-aks-app-service
                port:
                  number: 4000
